Source/WebCore/rendering/RenderFullScreen.cpp
@@ -35,7 +35,7 @@ using namespace WebCore;
 void RenderFullScreen::setAnimating(bool animating)
 {
     m_isAnimating = animating;
-#if ENABLE(ACCELERATED_COMPOSITING)
+#if USE(ACCELERATED_COMPOSITING)
     if (layer())
         layer()->contentChanged(RenderLayer::FullScreenChanged);
 #endif
